--- a/package.json
+++ b/package.json
@@ -1,23 +1,32 @@
 {
-  "name": "winsvideo-from-scratch",
+  "name": "backend",
   "version": "1.0.0",
-  "description": "A newer and better WinsVideo.",
+  "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js",
+    "fix": "standard --fix"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/WinsVideo/winsvideo-from-scratch.git"
-  },
-  "keywords": [],
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/WinsVideo/winsvideo-from-scratch/issues"
-  },
-  "homepage": "https://github.com/WinsVideo/winsvideo-from-scratch#readme",
   "dependencies": {
-    "express": "^4.17.1"
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "express-fileupload": "^1.2.1",
+    "ffmpeg": "0.0.4",
+    "fluent-ffmpeg": "^2.1.2",
+    "fs": "0.0.1-security",
+    "get-video-duration": "^3.0.2",
+    "jimp": "^0.16.1",
+    "lodash": "^4.17.20",
+    "mime-types": "^2.1.32",
+    "mongodb": "^4.1.2",
+    "morgan": "^1.10.0",
+    "mysql": "^2.18.1",
+    "random-id": "^1.0.4",
+    "standard": "^16.0.3",
+    "validator": "^13.5.2"
   }
 }
